--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -3,7 +3,7 @@
 </header>
 <div class="container">
     <div class="row">        
-        <div class="col-8">
+        <div class="col-sl-12 col-md-8">
             <fieldset>
                 <h2 class="test">Preencha esse Formulário</h2>
                 <form>
@@ -63,7 +63,7 @@
                 </form>
             </fieldset>
         </div >
-        <div class="apre col-4">
+        <div class="apre col-sl-12 col-md-4">
             <h2>Entre em Contato Conosco</h2>
             
             <form> 
