--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,7 @@
     margin-top: 20%;
 
 }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -27,6 +28,7 @@ header {
     height: 100vh;
     background: url(https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Beautiful-Full-HD-Wallpaper-Download-Free-PIC-WPE0010098.jpg) no-repeat 50% 50%;
     background-size: cover;
+    
 }
 
 .content {
@@ -38,7 +40,7 @@ header {
 }
 
 .logo {
-    line-height: 60px;
+    line-height: 18px;
     position: fixed;
     float: left;
     margin: 16px 46px;
@@ -48,15 +50,22 @@ header {
     letter-spacing: 2px;
 }
 
+.logof{
+    width:250px; 
+    padding: 5%;
+    margin-top: 10%;
+    margin-left: 8%;
+}
+
 nav {
     position: fixed;
-    z-index:1;
+    z-index:100;
     width: 100%;
-    line-height: 60px;
+    line-height: 20px;
 }
 
 nav ul {
-    line-height: 60px;
+    line-height: 20px;
     list-style: none;
     background: rgba(0, 0, 0, 0);
     overflow: hidden;
@@ -95,7 +104,7 @@ nav ul li a {
     display: none;
 }
 
-/*@media(max-width: 786px) {
+@media(max-width: 786px) {
 
     .logo {
           position: fixed;
@@ -127,28 +136,7 @@ nav ul li a {
           display: block;
     }
 
-}*/
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
+}
 /*Footer*/
 
 .context-dark, .bg-gray-dark, .bg-primary {
