--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,63 @@
-/*header {
+header {
     width: 100%;
-    height: 100vh;
-    background: url(https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Beautiful-Full-HD-Wallpaper-Download-Free-PIC-WPE0010098.jpg) no-repeat 50% 50%;
+    height: 150vh;
+    background: url("../../assets/download.jpeg") no-repeat 50% 50%;
     background-size: cover;
-}*/
+    z-index:1;
+}
+
+.caption {
+    position: absolute;
+    left: 15%;
+    top: 40%;
+    width: 70%;
+    height: 50%;
+    text-align: center;
+    background: rgba(34, 53, 171, 0.5);
+    color: white;
+}
+
+
+.border{
+    border: none!important;
+    font-size: 30px;
+    margin-top: 10%;
+}
+
+.caption2 {
+    position: absolute;
+    left: 15%;
+    margin-top: 2%;
+    width: 70%;
+    height: 50%;
+    text-align: center;
+    background-color: white;
+    -webkit-box-shadow: -7px 8px 8px -1px rgba(0,0,0,0.32);
+    -moz-box-shadow: -7px 8px 8px -1px rgba(0,0,0,0.32);
+    box-shadow: -7px 8px 8px -1px rgba(0,0,0,0.32);
+    z-index:3;
+
+
+}
+
+.test{
+    z-index:2;
+    position: absolute;
+    left: 50%;
+    top: 140%;
+    width: 40%;
+    height: 60%;
+    background: url("https://images.unsplash.com/photo-1463281797137-8e3449cd6019?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") no-repeat 50% 50%;
+
+}
+
+.texto{
+    margin-top: 12%;
+    margin-left: 10%;
+    margin-right: 10%;
+
+}
+
+.pridiv{
+    height: 90vh;
+}
