--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <header>
         <div class="caption">
-          <p class="border">PALAVRAS BONITAS PQ EU N TENHO IDEIA DE Q TO FAZENDO</p>
+          <p class="border">SanSeven</p>
+          <div class="barrinha2"></div>
+          <p class="border2"> texto meramente ilustrativo pq eu n tenho criatividade pra escrever um texto bonito q todo mundo olhe e fale "nossa, q texto bonito, eu queria ser q nem esse escritor! cheio de criatividade e inteligencia"</p>
         </div>
 </header>
     <div class="container">
@@ -9,9 +11,16 @@
 
         </div>
         <div class="caption2">
+          <p class="titulo">O que é o <span>SanSeven</span></p>
+          <div class="barrinha"></div>
           <p class="texto">
-            Bem-vindo ao site da SanSeven! A empresa de informática que pensa no melhor para o seus clientes. Fique a vontade para explorar nosso site, saiba mais sobre nois, fale com a gente, veja o que os nossos clientes falam sobre nossa empresa, veja nossa UML e saiba nossos Orçamentos.
+            A empresa de informática que pensa no melhor para o seus clientes. Fique a vontade para explorar nosso site, saiba mais sobre nois, fale com a gente, veja o que os nossos clientes falam sobre nossa empresa, veja nossa UML e saiba nossos Orçamentos.
           </p>
+        </div>
+        <div class="test2"></div>
+        <div class="contat">
+          <P>Entre em contato conosco</P>
+          <button routerLink="contato" class="btn">Ir para contato</button>
         </div>
       </div>
         
