--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 header {
     width: 100%;
-    height: 150vh;
-    background: url("../../assets/download.jpeg") no-repeat 50% 50%;
+    height: 120vh;
+    background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
     background-size: cover;
     z-index:1;
 }
@@ -11,9 +11,9 @@ header {
     left: 15%;
     top: 40%;
     width: 70%;
-    height: 50%;
+    height: 40%;
     text-align: center;
-    background: rgba(34, 53, 171, 0.5);
+    background: rgba(18, 52, 104, 0.7);
     color: white;
 }
 
@@ -21,7 +21,11 @@ header {
 .border{
     border: none!important;
     font-size: 30px;
-    margin-top: 10%;
+    margin-top: 2%;
+    color: white;
+    font-size: 50px;
+    font-weight: 900;
+
 }
 
 .caption2 {
@@ -29,7 +33,7 @@ header {
     left: 15%;
     margin-top: 2%;
     width: 70%;
-    height: 50%;
+    height: 45%;
     text-align: center;
     background-color: white;
     -webkit-box-shadow: -7px 8px 8px -1px rgba(0,0,0,0.32);
@@ -40,21 +44,99 @@ header {
 
 }
 
+.border2{
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 8%;
+    text-align: center;
+    font-family: Tahoma;
+    font-weight: 100;
+}
+
 .test{
     z-index:2;
     position: absolute;
     left: 50%;
-    top: 140%;
+    top: 110%;
     width: 40%;
-    height: 60%;
+    height: 50%;
     background: url("https://images.unsplash.com/photo-1463281797137-8e3449cd6019?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") no-repeat 50% 50%;
 
 }
 
+.test2{
+    z-index:1;
+    position: absolute;
+    left: 10%;
+    top: 130%;
+    width: 85%;
+    height: 60%;
+    background: rgba(246, 251, 251, 1);
+    
+}
+
+.contat{
+    z-index:3;
+    position: absolute;
+    margin-top: 10%;
+    margin-left: 56%;
+    color: rgba(0, 49, 122, 1);
+    font-weight: 600;
+}
+
+.barrinha{
+    z-index:3;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    width: 18.5%;
+    height: 1%;
+    background: rgba(129, 188, 186, 1);
+    
+}
+.barrinha2{
+    z-index:3;
+    position: absolute;
+    left: 40%;
+    top: 30%;
+    width: 20%;
+    height: 1.5%;
+    background: rgba(129, 188, 186, 1);
+    
+}
+
+.btn{
+    background-color: rgba(129, 188, 186, 1);
+    color: white;
+    margin-left: 15%;
+}
+
+.btn:hover{
+    background:rgba(0, 49, 122, 1);
+    color: white;
+    
+}
+
+
+
+.titulo{
+    margin-top: 5%;
+    left: 1%;
+    font-size: 40px;
+    color: rgba(0, 49, 122, 1);
+}
+
+span{
+    font-weight: 700;
+    
+}
+
 .texto{
-    margin-top: 12%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 30%;
+    color: rgba(0, 49, 122, 1);
+    text-align: justify;
 
 }
 
