--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,22 @@
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+body {
+    font-family: "Helvetica Neue",sans-serif;
+    font-weight: lighter;
+    min-height:100%;
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    background: url(https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Beautiful-Full-HD-Wallpaper-Download-Free-PIC-WPE0010098.jpg) no-repeat 50% 50%;
+    background-size: cover;
+    
+}
 .bg-joao{
     background-color: rgb(46, 22, 68);
 }
@@ -12,24 +31,6 @@
 
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-body {
-    font-family: "Helvetica Neue",sans-serif;
-    font-weight: lighter;
-}
-
-header {
-    width: 100%;
-    height: 100vh;
-    background: url(https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Beautiful-Full-HD-Wallpaper-Download-Free-PIC-WPE0010098.jpg) no-repeat 50% 50%;
-    background-size: cover;
-    
-}
 
 .content {
     width: 94%;
@@ -50,12 +51,6 @@ header {
     letter-spacing: 2px;
 }
 
-.logof{
-    width:250px; 
-    padding: 5%;
-    margin-top: 10%;
-    margin-left: 8%;
-}
 
 nav {
     position: fixed;
@@ -140,29 +135,80 @@ nav ul li a {
 
 }
 /*Footer*/
-
-.context-dark, .bg-gray-dark, .bg-primary {
-    color: rgba(255, 255, 255, 0.8);
+footer{
+    background: rgba(0, 49, 122, 1);
 }
 
-.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
-    color: #ffffff;
-}
-.nav-list li {
-    padding-top: 5px;
-    padding-bottom: 5px;
+.divf{
+    text-align: center;
+    border: none;
 }
 
-.nav-list li a:hover:before {
-    margin-left: 0;
-    opacity: 1;
-    visibility: visible;
+.ulf{
+    margin-top: 10%;
+    margin-bottom: 10%
 }
+
 
 ul, ol {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+.textf{
+    margin-top: 15%;
+    color: #fff;
+    font-weight: 800;
+    font-size: 30px;
+    font-family: secon
+}
+
+.nav-list li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.af{
+    color: #fff;
+}
+
+.af:hover{
+    text-decoration: none;
+    color: rgba(129, 188, 186, 1);
+}
+
+.batata{
+    background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
+}
+
+.blur{
+  background-color: rgba(26, 26, 26, 0.3);
+  font-family: sans-serif;
+  text-align: center;
+  line-height: 1; 
+  backdrop-filter: blur(10px);  
+  -webkit-backdrop-filter: blur(10px);
+  width: 100%;
+  height: 10%;
+  padding: 20px 40px;
+}
+
+.logofl{
+    height: 50px;
+    margin-top: 37%;
+}
+
+
+.logofn{
+    width: 200px;
+    margin-top: 40%;
+    margin-left: 5%;
+}
+
+.copyr{
+    color: #fff;
+    margin-top: 1%;
 }
 
 .social-inner {
@@ -177,16 +223,4 @@ ul, ol {
 }
 .social-container .col {
     border: 1px solid rgba(255, 255, 255, 0.1);
-}
-.nav-list li a:before {
-    content: "\f14f";
-    font: 400 21px/1 "Material Design Icons";
-    color: #4d6de6;
-    display: inline-block;
-    vertical-align: baseline;
-    margin-left: -28px;
-    margin-right: 7px;
-    opacity: 0;
-    visibility: hidden;
-    transition: .22s ease;
 }
