--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,52 +25,42 @@
 <router-outlet></router-outlet>
 
 <!--Footer-->
-<footer class="section footer-classic context-dark bg-image mt-4" style="background: black;">
+<footer class="section footer-classic context-dark bg-image mt-4">
   <div class="container-fluid">
     <div class="row row-30">
-      <div class="col-md-3">
-        <img class="logof" src="assets/logo/completa_branca_sem_fundo.png" >
+      <div class="col-md-1">
+        
       </div>
-      <div class="col-md-3">
-        <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="130" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
-          <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.</p>
-          <!-- Rights-->
-          <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>SanSeven</span><span>. </span><span>All Rights Reserved.</span></p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <h5 class="mt-3">Contacts</h5>
-        <dl class="contact-list">
-          <dt>Address:</dt>
-          <dd>666 South Park Avenue, Madureira, RJ</dd>
-        </dl>
-        <dl class="contact-list">
-          <dt>Email:</dt>
-          <dd><a href="mailto:#">emailinexistentewagner@gmail.com</a></dd>
-        </dl>
-        <dl class="contact-list">
-          <dt>Phones:</dt>
-          <dd><a href="tel:#">+91 7568543012</a> <span> or </span> <a href="tel:#">+91 9571195353</a>
-          </dd>
-        </dl>
-      </div>
-      <div class="col-md-3" style="text-align: center">
-        <h5 class="mt-3">Links</h5>
-        <ul class="nav-list">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contacts</a></li>
-          <li><a href="#">Pricing</a></li>
+      <div class="col-md-3 divf">
+        <h5 class="textf">teste</h5>
+        <ul class="ulf">
+          <a class="af" routerLink="form"><li>teste</li></a>
+          <a class="af"  routerLink="form"><li>teste</li></a>
+          <a class="af"  routerLink="form"><li>teste</li></a>
+          <a class="af"  routerLink="form"><li>teste</li></a>        
         </ul>
+      </div>
+      <div class="col-md-3 divf">
+        <h5 class="textf">TESTE</h5>
+        <ul class="ulf">
+          <a class="af"  routerLink="form"><li>Home</li></a>
+          <a class="af"  routerLink="form"><li>About</li></a>
+          <a class="af"  routerLink="form"><li>teste</li></a>
+          <a class="af"  routerLink="form"><li>teste</li></a>        
+        </ul>
+      </div>
+      <div class="col-md-3 divf">
+        <img class="logofl" src="assets/logo/logo_branca_sem_fundo.png">
+        <img class="logofn" src="assets/logo/nome_branco_sem_fundo.png">
+      </div>
+      <div class="col-md-2">
       </div>
     </div>
   </div>
-  <div class="row no-gutters social-container">
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
-    <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+  <div class="row no-gutters social-container batata">
+    <div class="blur">
+      <P class="copyr">2019 SanSeven Copyright&copy;. Todos os direitos reservados.</P>
+    </div>
   </div>
 </footer>
 
