--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,3 +1,10 @@
+header {
+    width: 100%;
+    height: 20vh;
+    background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
+    background-size: cover;   
+}
+
 .apre{
     background-color: white;
     margin-top: 5%;
