--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 <router-outlet></router-outlet>
 
 <!--Footer-->
-<footer class="section footer-classic context-dark bg-image mt-4">
+<footer class="section footer-classic context-dark bg-image">
   <div class="container-fluid">
     <div class="row row-30">
       <div class="col-md-1">
