--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -143,3 +143,50 @@ span{
 .pridiv{
     height: 90vh;
 }
+
+.ba{
+    position: absolute;
+    background: url("https://images.unsplash.com/photo-1463281797137-8e3449cd6019?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") no-repeat 50% 50%;
+    height: 50%;  
+    width: 20%;  
+}
+.bb{
+    position: absolute;
+    margin-left: 49%;
+    height: 26%;
+    width: 29%;
+    background: #dcdcdc;
+}
+.bc{
+    position: absolute;
+    margin-left: 20%;
+    height: 26%;
+    width: 29%;
+    background: rgba(0, 49, 122, 1);
+}
+.bd{
+    position: absolute;
+    margin-left: 20%;
+    margin-top: 14.4%;
+    height: 23.8%;
+    width: 58%;
+    background: white;
+}
+
+.pcard{
+    margin-left: 20%;
+    margin-right: 10%;
+    margin-top: 20%;
+    font-weight: 700;
+}
+.pcardg{
+    margin-left: 20%;
+    margin-right: 10%;
+    margin-top: 8%;
+    font-weight: 700;
+}
+
+.pcard,
+.pcardg{
+    text-align: justify;
+}
