--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,18 @@
             <i class="fa fa-bars fa-2x"></i>
          </div>
       <div class="logo">
-          <a routerLink="/"><img src="assets/logo/cortenome_branco_sem_fundo.png" style="height: 18px;"></a>
+          <a routerLink=""><img src="assets/logo/cortenome_branco_sem_fundo.png" style="height: 18px;"></a>
           
         </div>
         <div class="menu">
            <ul>
               <li><a routerLink="">Home</a></li>
-              <li><a routerLink="">Quem Somos</a></li>
+              <li><a routerLink="sdfsdf">Quem Somos</a></li>
               <li><a routerLink="contato">Contato</a></li>
-              <li><a routerLink="">Depoimentos</a></li>
-              <li><a routerLink="">Documentação UML</a></li>
+              <li><a routerLink="depoimento">Depoimentos</a></li>
+              <li><a routerLink="servico">Serviços</a></li>
               <li><a routerLink="form">Orçamento</a></li>
+              <li><a routerLink="portifolio">Portifolio</a></li>
            </ul>
         </div>
      </nav>
