--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,6 @@
         <div class="menu">
            <ul>
               <li><a routerLink="">Home</a></li>
-              <li><a routerLink="sdfsdf">Quem Somos</a></li>
               <li><a routerLink="contato">Contato</a></li>
               <li><a routerLink="depoimento">Depoimentos</a></li>
               <li><a routerLink="servico">Serviços</a></li>
@@ -26,14 +25,14 @@
 <router-outlet></router-outlet>
 
 <!--Footer-->
-<footer class="section footer-classic context-dark bg-image">
+<footer class="context-dark bg-image">
   <div class="container-fluid">
     <div class="row row-30">
       <div class="col-md-1">
         
       </div>
       <div class="col-md-3 divf">
-        <h5 class="textf">teste</h5>
+        <h5 class="textf">Serviços</h5>
         <ul class="ulf">
           <a class="af" routerLink="form"><li>teste</li></a>
           <a class="af"  routerLink="form"><li>teste</li></a>
@@ -42,7 +41,7 @@
         </ul>
       </div>
       <div class="col-md-3 divf">
-        <h5 class="textf">TESTE</h5>
+        <h5 class="textf">Sobre</h5>
         <ul class="ulf">
           <a class="af"  routerLink="form"><li>Home</li></a>
           <a class="af"  routerLink="form"><li>About</li></a>
@@ -52,7 +51,7 @@
       </div>
       <div class="col-md-3 divf">
         <img class="logofl" src="assets/logo/logo_branca_sem_fundo.png">
-        <img class="logofn" src="assets/logo/nome_branco_sem_fundo.png">
+        <!--<img class="logofn" src="assets/logo/nome_branco_sem_fundo.png">-->
       </div>
       <div class="col-md-2">
       </div>
