--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -130,6 +130,7 @@ footer{
 .divf{
     text-align: center;
     border: none;
+    height: 38vh;
 }
 
 .ulf{
@@ -167,6 +168,9 @@ ul, ol {
 }
 
 .batata{
+    position: absolute;
+    height: 10%;
+    width: 100%;
     background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
 }
 
@@ -178,7 +182,7 @@ ul, ol {
   backdrop-filter: blur(10px);  
   -webkit-backdrop-filter: blur(10px);
   width: 100%;
-  height: 10%;
+  height: 100%;
   padding: 20px 40px;
 }
 
