--- a/src/app/servico/servico.component.css
+++ b/src/app/servico/servico.component.css
@@ -3,5 +3,50 @@ header {
     height: 20vh;
     background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
     background-size: cover;
-    margin-bottom: 3%;
+    border: 1px solid black;
+}
+
+h1,h3{
+    text-align: center;
+    color: rgba(0, 49, 122, 1);
+}
+
+h1{
+    padding-top: 3%;
+}
+
+h3{
+    margin-top: 1%
+}
+
+.corpo{
+    background: #fafafaee;
+    height: 900vh;
+}
+
+.postagem{
+    background: #fff;
+    margin: 0 auto;
+    border-radius: 50px;
+    border: 1px solid #efefef;
+    margin-top: 5%;
+}
+
+.titulo{
+    padding-top: 3%;
+}
+
+img{
+    padding-top: 3%;
+    width: 90%; 
+    height: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+p{
+    padding: 5%;
+    color: rgba(0, 49, 122, 1);
+    text-align: justify;
 }
