--- a/src/app/portifolio/portifolio.component.css
+++ b/src/app/portifolio/portifolio.component.css
@@ -3,48 +3,45 @@ header {
     height: 20vh;
     background: url("https://www.upsa.edu.gh/src/wp-content/uploads/2017/02/88_III_2560_1600.jpg") no-repeat 50% 50%;
     background-size: cover;
-    margin-bottom: 3%;
-}
-
-.baixo{
-    margin-bottom: 5%;
-}
-
-.section1{
-    display:flex;
-    height: 100vh;
-   background-color:blue;
-}
-.centralize{
-    margin: auto;
-    text-align: center;
+    margin-bottom: 1.33%;
 }
 
 .imagemProjeto{
-    width: 30vh;
+    padding: 2.33%;
+    width: 50vh;
     height: 30vh;
-    padding-left: 15px;
 }
 .section2{
-    display: flex;
+    display:flex;
+    margin-left: 35%;
+    margin-bottom: 1.3%;
+    width: 50%;
     height: 33vh;
-    background-color: white;
-
+    color: azure;
+    background-color: rgba(0, 49, 122, 1);
 }
 .section3{
-    display: flex;
+    display:flex;
+    margin-left: 11%;
+    margin-bottom: 1.3%;
+    width: 50%;
     height: 33vh;
-    background-color: #e5e6ea;
-
+    color: azure;
+    background-color: rgba(0, 49, 122, 1);
 }
-.botao{
-    background-color: aqua;
-    border-radius: 5px;
-    color: white;
-    padding: 10px;
-    font-family: 'Fjalla One', sans-serif;
+/*.sobre:hover{
+    transition: 500ms;
+    opacity: 0.5;
+}*/
+#sub{
+    width: 35%;
+    border-bottom: 2px solid white;
+    margin-bottom: 2%;
 }
-
-ul{
-    width: 60%;
+#sub:hover{
+    transition: 100ms;
+}
+.titulo{
+    text-align: center;
+    margin-bottom: 2.33%; 
 }
