--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="menu">
            <ul>
-              <li><a routerLink="">Home</a></li>
+              <li class="dist"><a routerLink="">Home</a></li>
               <li><a routerLink="contato">Contato</a></li>
               <li><a routerLink="depoimento">Depoimentos</a></li>
               <li><a routerLink="servico">Serviços</a></li>
@@ -32,21 +32,19 @@
         
       </div>
       <div class="col-md-3 divf">
-        <h5 class="textf">Serviços</h5>
+        <h5 class="textf">SanSeven</h5>
         <ul class="ulf">
-          <a class="af" routerLink="form"><li>teste</li></a>
-          <a class="af"  routerLink="form"><li>teste</li></a>
-          <a class="af"  routerLink="form"><li>teste</li></a>
-          <a class="af"  routerLink="form"><li>teste</li></a>        
+          <a class="af" routerLink=""><li>Home</li></a>
+          <a class="af"  routerLink="contato"><li>contato</li></a>
+          <a class="af"  routerLink="depoimento"><li>Depoimentos</li></a>        
         </ul>
       </div>
       <div class="col-md-3 divf">
-        <h5 class="textf">Sobre</h5>
+        <h5 class="textf">Serviços</h5>
         <ul class="ulf">
-          <a class="af"  routerLink="form"><li>Home</li></a>
-          <a class="af"  routerLink="form"><li>About</li></a>
-          <a class="af"  routerLink="form"><li>teste</li></a>
-          <a class="af"  routerLink="form"><li>teste</li></a>        
+          <a class="af"  routerLink="portifolio"><li>Portifolio</li></a>
+          <a class="af"  routerLink="form"><li>Orçamento</li></a>
+          <a class="af"  routerLink="servico"><li>Serviços</li></a>      
         </ul>
       </div>
       <div class="col-md-3 divf">
