--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     <div class="caption2">
       <p class="titulo">O que é o <span>SanSeven</span></p>
       <div class="barrinha"></div>
-      <p class="texto">
+      <p class="texto textomenor">
         A empresa de informática que pensa no melhor para o seus clientes. Fique a vontade para explorar nosso site, saiba mais sobre nois, fale com a gente, veja o que os nossos clientes falam sobre nossa empresa, veja nossa UML e saiba nossos Orçamentos.
       </p>
     </div>
