--- a/src/app/portifolio/portifolio.component.html
+++ b/src/app/portifolio/portifolio.component.html
@@ -41,22 +41,22 @@
               </div>
             </div>
           </div>
-    <div class="row section3 sobre" data-toggle="modal" data-target="#Projeto2">
+      <div class="row section3 sobre" data-toggle="modal" data-target="#Projeto2">
         <div class="col m-3">
-                <div id="sub">Projeto Biblioteca</div>
-            <ul>
-                <li>descrição do projetos descrição</li>
-                <li>Tecnologia1</li>
-                <li>Tecnologia2</li>
-                <li>Tecnologia3</li>
-                <li>Tecnologia4</li>          
-            </ul>
+          <div id="sub">Projeto Biblioteca</div>
+          <ul>
+            <li>descrição do projetos descrição</li>
+            <li>Tecnologia1</li>
+            <li>Tecnologia2</li>
+            <li>Tecnologia3</li>
+            <li>Tecnologia4</li>          
+          </ul>
         </div>
         <div class="col">
-            <img class="imagemProjeto"  src="./assets/projeto_java.jpg">
+          <img class="imagemProjeto"  src="./assets/projeto_java.jpg">
         </div> 
-    </div>
-    <div class="modal" id="Projeto2">
+      </div> 
+      <div class="modal" id="Projeto2">
             <div class="modal-dialog">
               <div class="modal-content">
               
@@ -123,6 +123,21 @@
               </div>
             </div>
           </div>
+          <div class="row section3 sobre" data-toggle="modal" data-target="#Projeto2">
+              <div class="col m-3">
+                <div id="sub">Logo</div>
+                <ul>
+                  <li>descrição do projetos descrição</li>
+                  <li>Tecnologia1</li>
+                  <li>Tecnologia2</li>
+                  <li>Tecnologia3</li>
+                  <li>Tecnologia4</li>          
+                </ul>
+              </div>
+              <div class="col">
+                <img class="imagemProjeto"  src="./assets/logo/completa_fundo_preto_fonte_branca.jpg">
+              </div> 
+            </div> 
 </div>
 
 <!--
