--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -122,6 +122,17 @@ nav ul li a {
     }
 
 }
+@media(max-width: 1024px){
+    nav ul li{
+        width: 5%;
+        margin-left: -4px;
+        padding: 1px;
+        margin-left: 90px;
+        margin-top: 2%;
+        padding-bottom: 2%;
+        line-height: 20px;
+    }
+}
 /*Footer*/
 footer{
     background: rgba(0, 49, 122, 1);
@@ -130,11 +141,11 @@ footer{
 .divf{
     text-align: center;
     border: none;
-    height: 38vh;
+    height: 30vh;
 }
 
 .ulf{
-    margin-top: 10%;
+    margin-top: 7%;
     margin-bottom: 10%
 }
 
@@ -187,8 +198,8 @@ ul, ol {
 }
 
 .logofl{
-    height: 50px;
-    margin-top: 37%;
+    height: 100px;
+    margin-top: 20%;
 }
 
 
