--- a/src/app/depoimento/depoimento.component.css
+++ b/src/app/depoimento/depoimento.component.css
@@ -9,10 +9,12 @@ header {
 .container {
     border: 2px solid rgba(0, 49, 122, 0.94);
     background-color: rgba(0, 49, 122, 0.94);
-    border-radius: 5px;
+    border-radius: 100px;
     padding: 16px;
     margin: 0 auto;
     margin-bottom: 1%;
+    width: 80%;
+    margin-bottom: 3%;
   }
   
   /* Clear floats after containers */
