--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -204,8 +204,8 @@ span{
 .sobre1{
     z-index:2;
     position: absolute;
-    height: 65%;
-    width: 60%;
+    height: 55%;
+    width: 50%;
     margin-top: 5%;
     margin-left: 5%;
     -webkit-box-shadow: -13px 17px 8px -5px rgba(0,0,0,0.75);
@@ -237,7 +237,7 @@ span{
 .sobre2{
     z-index:2;
     position: absolute;
-    height: 65%;
+    height: 53%;
     width: 55%;
     margin-top: 45%;
     margin-left: 41%;
@@ -274,5 +274,26 @@ span{
     width: 30%;
     height: 60%;
     background: url("https://images.unsplash.com/photo-1463281797137-8e3449cd6019?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") no-repeat 50% 50%;
+
+}
+
+@media(max-width: 1024px){
+    .sobre2{
+        margin-top: 60%;   
+        height: 70%;
+    }
+    
+    .sobre1{
+      height: 78%;
+    }
+
+    .textomenor{
+        width: 60%;
+    }
+
+    .contat{
+        margin-top: 15%;
+        margin-left: 60%;
+    }
 
 }
