--- a/src/app/servico/servico.component.css
+++ b/src/app/servico/servico.component.css
@@ -21,7 +21,7 @@ h3{
 
 .corpo{
     background: #fafafaee;
-    height: 900vh;
+    height: 770vh;
 }
 
 .postagem{
@@ -49,4 +49,11 @@ p{
     padding: 5%;
     color: rgba(0, 49, 122, 1);
     text-align: justify;
+}
+
+@media(max-width: 1024px){
+    .corpo{
+        height: 730vh;
+    }
+
 }
