--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,12 @@
         </div>
         <div class="menu">
            <ul>
-              <li class="dist"><a routerLink="">Home</a></li>
-              <li><a routerLink="contato">Contato</a></li>
-              <li><a routerLink="depoimento">Depoimentos</a></li>
-              <li><a routerLink="servico">Serviços</a></li>
-              <li><a routerLink="form">Orçamento</a></li>
-              <li><a routerLink="portifolio">Portifolio</a></li>
+              <li><a class="batest" routerLink="">Home</a></li>
+              <li><a class="batest" routerLink="contato">Contato</a></li>
+              <li><a class="batest" routerLink="depoimento">Depoimentos</a></li>
+              <li><a class="batest" routerLink="servico">Serviços</a></li>
+              <li><a class="batest" routerLink="form">Orçamento</a></li>
+              <li><a class="batest" routerLink="portifolio">Portifolio</a></li>
            </ul>
         </div>
      </nav>
