--- a/src/app/portifolio/portifolio.component.html
+++ b/src/app/portifolio/portifolio.component.html
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="row section3 sobre" data-toggle="modal" data-target="#Projeto2">
+          <div class="row section3 sobre" data-toggle="modal" data-target="#Projeto4">
               <div class="col m-3">
                 <div id="sub">Logo</div>
                 <ul>
@@ -138,6 +138,32 @@
                 <img class="imagemProjeto"  src="./assets/logo/completa_fundo_preto_fonte_branca.jpg">
               </div> 
             </div> 
+            <div class="modal" id="Projeto4">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                  
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                      <h4 class="modal-title">Projeto Rede</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                      <p>Desenho, documentação e instalação da rede para uma escola. Três redes foram realizados para que cada parte da escola pudesse 
+                          melhorar seu desempenho administrativo, para que as aulas fossem mais dinâmicas e para que todos os visitantes pudessem acessar 
+                          a rede.
+                      </p>
+                    </div>
+                    
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+                    
+                  </div>
+                </div>
+              </div>
 </div>
 
 <!--
